# energy-price-forecaster

./: .gitignore  fetch_data_pipeline.py  get_energy_data.py  get_weather_data.py  main.py  pyproject.toml
src/data_sources/: energy.py  weather.py
src/pipeline/: fetch_pipeline.py
test/: test_energy.py
