[project]
name = "energy-price-forecaster"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pandas>=3.0.2",
]

[dependency-groups]
dev = [
    "entsoe-py>=0.8.0",
    "openmeteo-requests>=1.7.5",
    "openmeteo-sdk>=1.26.0",
    "pyarrow>=24.0.0",
]
